# IAM-Quick-Menu

./: .gitignore  README.md
backend/: main.py  requirements.txt
backend/assets/: licensing.csv
backend/helpers/: helper.py
backend/models/: graph_models.py
backend/powershell/: Server.ps1  requirements.txt
backend/powershell/config/: template.json
backend/powershell/routes/: ActiveDirectory.ps1  ExchangeOnline.ps1  Graph.ps1
backend/router/: graph.py
frontend/: .gitignore  App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  README.md  _Imports.razor  frontend.csproj  frontend.sln  index.html  package-lock.json  package.json  quasar.config.js  vite.config.js
frontend/Components/Layout/: MainLayout.razor  NavMenu.razor
frontend/Components/Pages/: Home.razor
frontend/src/: App.vue  main.js
frontend/src-electron/: electron-main.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: auth.rs  main.rs
frontend/src/authentication/: auth-config.js  auth-service.js
frontend/src/components/: AppDrawer.vue  AppHeader.vue  GeneralShowJsonDialog.vue  SettingsEnvironmentsBar.vue  SettingsEnvironmentsData.vue
frontend/src/layouts/: LoginLayout.vue  MainLayout.vue
frontend/src/pages/: IndexPage.vue  LoginPage.vue
frontend/src/pages/Graph/: GetUsersLicenseDetails.vue  Me.vue  RevokeSignInSession.vue
frontend/src/router/: index.js  routes.js
frontend/src/services/: graph_api.js
frontend/src/stores/: auth-store.js  environments.js  user.js
frontend/src/views/: Dashboard.vue
frontend/wwwroot/: index.html
(+3 files in other folders)
